--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 ~$art_App_Appendix.docx
 document/APC_data/~$temporal.xlsx
 document/AAG_abstract/~$I_impact_waiting_LLY_HJM.docx
+document/pechakucha/~$lighting_tallk.pptx
