[FIND THE FIRST DRAFT HERE] Initial commit for first round revision

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 document/APC_data/~$temporal.xlsx
 document/AAG_abstract/~$I_impact_waiting_LLY_HJM.docx
 document/pechakucha/~$lighting_tallk.pptx
+~$vision_Comments.docx
