--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ document/AAG_abstract/~$I_impact_waiting_LLY_HJM.docx
 document/pechakucha/~$lighting_tallk.pptx
 ~$vision_Comments.docx
 ~$art_App_Revision.docx
+~$Todo_List.xlsx
