Update a lot of things

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ document/pechakucha/~$lighting_tallk.pptx
 ~$vision_Comments.docx
 ~$art_App_Revision.docx
 ~$Todo_List.xlsx
+document/~$revision_data.xlsx
